--- a/src/style.css
+++ b/src/style.css
@@ -5,8 +5,6 @@
  * Replace them with your own styles or remove the file completely.
  */
 
-.wp-block-create-block-unblock-writer {
-	background-color: #21759b;
-	color: #fff;
-	padding: 2px;
-}
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
